5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1716_2496.log
== TEST (2019-05-10 18:47:27) 
-- CODE:
m=0
n=int(input("digite um numero: "))
while(n!=-1):
	valor=m+n
print(valor)
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:52:01) 
-- CODE:
soma=0
n=0
while(n==0):
	l=int(input("digite um numero: "))
	if(l!=-1):
		soma=soma+l
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:53:13) 
-- CODE:
soma=0
n=0
while(n!=0):
	l=int(input("digite um numero: "))
	soma=soma+l
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:54:31) 
-- CODE:
soma=0
n=0
while(n!=-1):
	l=int(input("digite um numero: "))
	soma=soma+l
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:55:05) 
-- CODE:
soma=0
n=0
while(n!=-1):
	l=int(input("digite um numero: "))
	soma=soma+l
   print(soma)
-- ERROR:
File "XXXX", line 6
    print(soma)
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 18:58:52) 
-- CODE:
soma=0
n=1
while(n>=0):
	l=int(input("digite um numero: "))
	if(l!=-1):
		soma=soma+l
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    l=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:01:03) 
-- CODE:
soma=0
n=1
while(n>=0):
	n=int(input("digite um numero: "))
	if(l>=0):
		soma=soma+l
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(l>=0):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:01:20) 
-- CODE:
soma=0
n=1
while(n>=0):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+l
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(l>=0):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:01:38) 
-- CODE:
soma=0
n=1
while(n>=0):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=n+l
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(l>=0):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:01:58) 
-- CODE:
soma=0
n=1
while(n>=0):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(l>=0):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:02:17) 
-- CODE:
soma=0
n=1
while(n>=0):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(l>=0):
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:02:53) 
-- CODE:
soma=0
n=1
while(n>=0):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.171366
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:03:23) 
-- CODE:
soma=0
n=1
while(n>=0):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.205393
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:04:38) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- OUTPUT:
1408
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:04:53) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.205524
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1408
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:06:30) 
-- CODE:
soma=0
n=1
p=input()
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.158867
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1408
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:07:27) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.131622
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1408
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
43606
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:07:50) 
-- CODE:
soma=0
n=1
p=input()
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.186668
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1408
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:08:00) 
-- CODE:
soma=0
n=1
p=input("")
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n>=0):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.14778
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
1408
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:39:01) 
-- CODE:
soma=0
n=int(input("digite um numero: "))
while(n!=-1):
	if(n>=0):
		soma=soma+n
	print(soma)
	n=int(input("digite um numero: "))
-- OUTPUT:
0
1075
1408
1408
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:39:52) 
-- CODE:
soma=0
n=int(input("digite um numero: "))
while(n!=-1):
	if(n>=0):
		soma=soma+n
	print(soma)
	n=int(input("digite um numero: "))
print(soma)
-- OUTPUT:
0
1075
1408
1408
1408
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:40:06) 
-- CODE:
soma=0
n=int(input("digite um numero: "))
while(n!=-1):
	if(n>=0):
		soma=soma+n
	print(soma)
	n=int(input("digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.123329
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
0
1075
1408
1408
1408
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
43606
43606
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:41:28) 
-- CODE:
soma=0
n=int(input("digite um numero: "))
while(n!=-1):
	soma=soma+n
print(soma)
-- OUTPUT:
0
1075
1408
1408
1408
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:42:17) 
-- CODE:
soma=0
n=1
while(n!=-1):
	soma=soma+n
	n=int(input("digite um numero: "))
print(soma)
-- OUTPUT:
875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:42:50) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	soma=soma+n
print(soma)
-- OUTPUT:
873
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:43:53) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n=!-1)
		soma=soma+n
print(soma)
-- ERROR:
File "XXXX", line 5
    if(n=!-1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:44:02) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n=!-1):
		soma=soma+n
print(soma)
-- ERROR:
File "XXXX", line 5
    if(n=!-1):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 19:44:16) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n!=-1):
		soma=soma+n
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 19:44:27) 
-- CODE:
soma=0
n=1
while(n!=-1):
	n=int(input("digite um numero: "))
	if(n!=-1):
		soma=soma+n
print(soma)
-- EXECUTION TIME:
0.133748
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
